--- a/test-grails-appinfo/grails-app/conf/application.yml
+++ b/test-grails-appinfo/grails-app/conf/application.yml
@@ -101,9 +101,13 @@ dataSource:
 
 environments:
     development:
-        dataSource:
-            dbCreate: create-drop
-            url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+        dataSources:
+            dataSource:
+                dbCreate: create-drop
+                url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            secondDs:
+                dbCreate: create-drop
+                url: jdbc:h2:mem:devDb2;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
     test:
         dataSource:
             dbCreate: update
@@ -147,7 +151,7 @@ grails:
 
 # Appinfo grails plugin settings
 appinfo:
-    urlList:
+    urls:
         - url: 'http://localhost:8080'
           name: 'web root'
           method: 'GET'
