better partition of info contributors with specific yaml config flags

--- a/test-grails-appinfo/grails-app/conf/application.yml
+++ b/test-grails-appinfo/grails-app/conf/application.yml
@@ -151,12 +151,18 @@ grails:
 
 # Appinfo grails plugin settings
 appinfo:
-    urls:
-        - url: 'http://localhost:8080'
-          name: 'web root'
-          method: 'GET'
-        - url: 'http://localhost:8080/info'
-          name: 'web_info'
-    aws:
-        s3:
-            bucket: 'dda-de-dev'
+    health:
+        urls:
+            - url: 'http://localhost:8080'
+              name: 'web root'
+              method: 'GET'
+            - url: 'http://localhost:8080/info'
+              name: 'web_info'
+        aws:
+            s3:
+                bucket: 'dda-de-dev'
+    info:
+        system: true
+#        runtime: true
+        bean: true
+
