--- a/test-grails-appinfo/build.gradle
+++ b/test-grails-appinfo/build.gradle
@@ -56,6 +56,7 @@ dependencies {
 
 
     compile project(':grails-appinfo')
+//    compile 'org.grails.plugins:grails-appinfo:0.5'
 
     compile 'joda-time:joda-time:2.8.2'  // used in ui dashboard service
     runtime 'org.grails.plugins:grails-console:2.0.8'  // runtime web console
