--- a/grails-appinfo/grails-app/conf/application.yml
+++ b/grails-appinfo/grails-app/conf/application.yml
@@ -6,6 +6,11 @@ grails:
     spring:
         transactionManagement:
             proxies: false
+    gorm:
+        reactor:
+            # Whether to translate GORM events into Reactor events
+            # Disabled by default for performance reasons
+            events: false
 info:
     app:
         name: '@info.app.name@'
