--- a/test-grails-appinfo/grails-app/conf/application.yml
+++ b/test-grails-appinfo/grails-app/conf/application.yml
@@ -6,6 +6,11 @@ grails:
     spring:
         transactionManagement:
             proxies: false
+    gorm:
+        reactor:
+            # Whether to translate GORM events into Reactor events
+            # Disabled by default for performance reasons
+            events: false
 info:
     app:
         name: '@info.app.name@'
@@ -18,15 +23,15 @@ spring:
         template:
             check-template-location: false
 
-# Spring Actuator Endpoints are Disabled in production by Default
-environments:
-    development:
-        endpoints:
-            enabled: true
+# Spring Actuator Endpoints are Disabled by Default
 endpoints:
-    enabled: false
+    enabled: true
     jmx:
         enabled: true
+# spring security is not applied
+management:
+    security:
+        enabled: false
 
 ---
 grails:
@@ -88,29 +93,20 @@ endpoints:
 hibernate:
     cache:
         queries: false
-        use_second_level_cache: true
+        use_second_level_cache: false
         use_query_cache: false
-        region.factory_class: org.hibernate.cache.ehcache.SingletonEhCacheRegionFactory
-
 dataSource:
     pooled: true
     jmxExport: true
     driverClassName: org.h2.Driver
     username: sa
-    password:
+    password: ''
 
 environments:
     development:
         dataSource:
             dbCreate: create-drop
             url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
-#        dataSources:
-#            dataSource:
-#                dbCreate: create-drop
-#                url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
-#            secondDs:
-#                dbCreate: create-drop
-#                url: jdbc:h2:mem:devDb2;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
     test:
         dataSource:
             dbCreate: update
@@ -118,7 +114,7 @@ environments:
     production:
         dataSource:
             dbCreate: none
-            url: jdbc:h2:./prodDb_tga;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            url: jdbc:h2:./prodDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
             properties:
                 jmxEnabled: true
                 initialSize: 5
@@ -138,18 +134,19 @@ environments:
                 jdbcInterceptors: ConnectionState
                 defaultTransactionIsolation: 2 # TRANSACTION_READ_COMMITTED
 
+# MongoDB settings
+---
+grails:
+    mongodb:
+        url: "mongodb://localhost/test_grails_appinfo"
+
 # AWS S3 settings
+---
 grails:
     plugin:
         awssdk:
             accessKey:
             secretKey:
-
----
-# MongoDB settings
-grails:
-    mongodb:
-        url: "mongodb://localhost/test_grails_appinfo"
 
 # Appinfo grails plugin settings
 appinfo:
@@ -167,4 +164,6 @@ appinfo:
         system: true
 #        runtime: true
         logging: true
+
+
 
