--- a/test-grails-appinfo/build.gradle
+++ b/test-grails-appinfo/build.gradle
@@ -64,8 +64,8 @@ dependencies {
 
 //    compile 'joda-time:joda-time:2.8.2'  // used in ui dashboard service
 
-    compile project(':grails-appinfo')
-//    compile 'org.grails.plugins:grails-appinfo:0.9.1'
+//    compile project(':grails-appinfo')
+    compile 'org.grails.plugins:grails-appinfo:2.0'
 
 }
 
