sample app config update

--- a/test-grails-appinfo/grails-app/conf/application.yml
+++ b/test-grails-appinfo/grails-app/conf/application.yml
@@ -154,6 +154,8 @@ grails:
 # Appinfo grails plugin settings
 appinfo:
     health:
+        mongodb:
+            showPassword: false
         urls:
             - url: 'http://localhost:8080'
               name: 'web root'
