add minor comment

--- a/test-grails-appinfo/grails-app/conf/application.yml
+++ b/test-grails-appinfo/grails-app/conf/application.yml
@@ -165,6 +165,6 @@ appinfo:
                 bucket: 'some-bucket'
     info:
         system: true
-#        runtime: true
+#        runtime: true # default not enabled
         logging: true
 
