--- a/grails-appinfo/build.gradle
+++ b/grails-appinfo/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     }
 }
 
-version "1.1"
+version "1.1.1"
 group "org.grails.plugins"
 
 apply plugin:"eclipse"
@@ -69,6 +69,9 @@ grailsPublish {
     developers = [binle: "Bin Le"]
 //    portalUser = ""
 //    portalPassword = ""
+
+    // with above configuration, run './gradlew bintrayUpload' command as:
+    //   bintrayUpload -DbintrayUser=ikalizpet  -DbintrayKey=f3e86cc1d...(API key given by bintray)
 }
 
 assets {
