bugfix when extracting db name from db conn string with '?...' suffix after db name

--- a/test-grails-appinfo/grails-app/conf/application.yml
+++ b/test-grails-appinfo/grails-app/conf/application.yml
@@ -138,7 +138,7 @@ environments:
 ---
 grails:
     mongodb:
-        url: "mongodb://localhost/test_grails_appinfo"
+        url: "mongodb://localhost/test_grails_appinfo?ssl=false"
 
 # AWS S3 settings
 ---
