--- a/test-grails-appinfo/build.gradle
+++ b/test-grails-appinfo/build.gradle
@@ -10,7 +10,7 @@ buildscript {
     }
 }
 
-version "1.2"
+//version "1.3"
 group "test.grails.appinfo"
 
 apply plugin:"eclipse"
@@ -54,14 +54,16 @@ dependencies {
     testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
     testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
     //////
-    runtime 'org.grails.plugins:grails-console:2.0.8'  // runtime web console
-    compile group: 'org.grails.plugins', name: 'aws-sdk', version: '1.10.44'
-    compile "org.grails.plugins:mongodb:6.0.11"
-
-    compile project(':grails-appinfo')
-//    compile 'org.grails.plugins:grails-appinfo:1.1.1'
-
     compile 'joda-time:joda-time:2.8.2'  // used in ui dashboard service
+    runtime 'org.grails.plugins:grails-console:2.0.8'  // runtime web console
+    ////// test with different AWS Grails plugin versions
+//    compile 'org.grails.plugins:aws-sdk:1.10.44'
+    compile 'org.grails.plugins:aws-sdk-s3:2.1.5'
+    //////
+    compile "org.grails.plugins:mongodb:6.0.11"
+    //////
+    compile project(':grails-appinfo')
+//    compile 'org.grails.plugins:grails-appinfo:1.3'
 }
 
 bootRun {
