--- a/grails-appinfo-ui/build.gradle
+++ b/grails-appinfo-ui/build.gradle
@@ -5,18 +5,17 @@ buildscript {
     }
     dependencies {
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
-        classpath "org.grails.plugins:hibernate5:${gormVersion-".RELEASE"}"
         classpath "com.bertramlabs.plugins:asset-pipeline-gradle:2.14.2"
     }
 }
 
-//version "2.1"
-group "test.grails.appinfo"
+//version "2.1.1"  // 2.x is for Grails 3.3.x
+group "org.grails.plugins"
 
 apply plugin:"eclipse"
 apply plugin:"idea"
-apply plugin:"war"
-apply plugin:"org.grails.grails-web"
+apply plugin:"org.grails.grails-plugin"
+apply plugin:"org.grails.grails-plugin-publish"
 apply plugin:"asset-pipeline"
 apply plugin:"org.grails.grails-gsp"
 
@@ -42,41 +41,42 @@ dependencies {
     compile "org.grails.plugins:cache"
     compile "org.grails.plugins:async"
     compile "org.grails.plugins:scaffolding"
-    compile "org.grails.plugins:events"
-    compile "org.grails.plugins:hibernate5"
-    compile "org.hibernate:hibernate-core:5.1.5.Final"
     compile "org.grails.plugins:gsp"
     console "org.grails:grails-console"
-    profile "org.grails.profiles:web"
-    runtime "org.glassfish.web:el-impl:2.1.2-b03"
-    runtime "com.h2database:h2"
-    runtime "org.apache.tomcat:tomcat-jdbc"
+    profile "org.grails.profiles:web-plugin"
+    provided "org.grails:grails-plugin-services"
+    provided "org.grails:grails-plugin-domain-class"
     runtime "com.bertramlabs.plugins:asset-pipeline-grails:2.14.2"
     testCompile "org.grails:grails-gorm-testing-support"
+    testCompile "org.grails:grails-plugin-testing"
     testCompile "org.grails.plugins:geb"
     testCompile "org.grails:grails-web-testing-support"
     testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
     testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
-    //////
-    runtime 'org.grails.plugins:grails-console:2.1.1'  // runtime web console
-    compile "org.grails.plugins:mongodb:6.1.2"
-    compile "org.grails.plugins:aws-sdk:1.10.74"
-
-//    compile 'joda-time:joda-time:2.8.2'  // used in ui dashboard service
-
-//    compile project(':grails-appinfo-ui')
-    compile project(':grails-appinfo')
-//    compile 'org.grails.plugins:grails-appinfo:2.0'
-
 }
 
 bootRun {
     jvmArgs('-Dspring.output.ansi.enabled=always')
     addResources = true
 }
+// enable if you wish to package this plugin as a standalone application
+bootRepackage.enabled = false
 
+grailsPublish {
+    // load bintray user and key from jvm -Dvar for security
+    user = System.getProperty('bintrayUser')
+    key = System.getProperty('bintrayKey')
+    githubSlug = 'ikaliZpet/grails-appinfo'
+    license {
+        name = 'Apache-2.0'
+    }
+    title = "Grails Appinfo plugin"
+    desc = "A Grails plugin to provide applicaiton system information for health-check and runtime inspection"
+    developers = [binle: "Bin Le"]
+//    portalUser = ""
+//    portalPassword = ""
+}
 
 assets {
-    minifyJs = true
-    minifyCss = true
+    packagePlugin = true
 }
