--- a/test-grails-appinfo/build.gradle
+++ b/test-grails-appinfo/build.gradle
@@ -62,11 +62,15 @@ dependencies {
     compile "org.grails.plugins:mongodb:6.1.2"
     compile "org.grails.plugins:aws-sdk:1.10.74"
 
-//    compile 'joda-time:joda-time:2.8.2'  // used in ui dashboard service
+    //// pick either:
+    //// - appinfo plugin, then only RESTful actuator JSON view is provided
+    //// - appinfi-ui plugin, then a web html dashboard UI is provided based on AdminLTE theme framework
 
-//    compile project(':grails-appinfo-ui')
-    compile project(':grails-appinfo')
+//    compile project(':grails-appinfo')
 //    compile 'org.grails.plugins:grails-appinfo:2.0'
+
+    compile project(':grails-appinfo-ui')
+//    compile 'org.grails.plugins:grails-appinfo-ui:2.2'
 
 }
 
